@@ -3,11 +3,10 @@ package fr.a4i.yatzy.model;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public record DiceCombination(List<Integer> dices) {
     public DiceCombination(int... array){
-        this(Arrays.stream(array).boxed().collect(Collectors.toList()));
+        this(Arrays.stream(array).boxed().toList());
     }
 
     public static DiceCombination empty(){
@@ -20,6 +19,10 @@ public record DiceCombination(List<Integer> dices) {
                 .flatMap(diceCombination -> diceCombination.dices().stream())
                 .toList()
         );
+    }
+
+    public int sum(){
+        return dices.stream().mapToInt(i -> i).sum();
     }
 
     public boolean isFailed(){
